Fix alignment issues

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  align-items: center;
   width: 80%;
   margin-top: 5%;
   padding-bottom: 5%;
